Fixed profile recordings being too big

--- a/SuperMuskler4000/css/style.css
+++ b/SuperMuskler4000/css/style.css
@@ -15,6 +15,10 @@
     width: 90%;
     margin-left:10%;
 }
+.recording_table {
+    width: 80%;
+    margin-left: 10%;
+}
 
 .name_exercise{
     display: inline;
